--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,13 +1,61 @@
-<html>
+﻿<html>
 <head>
     <title>SB Admin NG2.0</title>
-    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="node_modules/metismenu/dist/metisMenu.min.css" rel="stylesheet">
+    <link href="node_modules/morris.js/morris.css" rel="stylesheet">
+    <link href="assets/timeline.css" rel="stylesheet">
+    <link href="assets/sb-admin-2.css" rel="stylesheet">
+    <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="node_modules/gridstack/dist/gridstack.css" rel="stylesheet">
+
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    
+    <!--<script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
-    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-    <script src="system.js"></script>
+    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>-->
+
+    <script src="https://code.angularjs.org/2.0.0-beta.0/angular2-polyfills.js"></script>
+    <script src="https://code.angularjs.org/tools/system.js"></script>
+    <script src="https://code.angularjs.org/tools/typescript.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.0/Rx.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.0/angular2.dev.js"></script>
+    <script>
+      System.config({
+        transpiler: 'typescript',
+        typescriptOptions: { emitDecoratorMetadata: true },
+        packages: {'app': {defaultExtension: 'ts'}}
+      });
+      System.import('app/app.component')
+            .then(null, console.error.bind(console));
+    </script>        
 </head>
 <body>
-    <app>Loading...</app>
+    <div id="wrapper">
+        <app>Loading...</app>
+    </div>
+
+    <!--<script src="/node_modules/jquery/dist/jquery.min.js"></script>-->
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script> 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="node_modules/gridstack/dist/gridstack.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/metisMenu/dist/metisMenu.min.js"></script>
+    <script src="node_modules/raphael/raphael-min.js"></script>
+    <script src="node_modules/morris.js/morris.min.js"></script>
+    <script src="assets/morris-data.js"></script>
+    <script src="assets/sb-admin-2.js"></script>
+    
 </body>
 </html>
